# yet-another-rust-ssg

./: Cargo.toml  README.md
content/blog/: Benvenuto.md  Perché usare Rust per un SSG.md  yarssg.md
content/pages/: about.md  contact.md  home.md
src/: file_io.rs  main.rs  markdown.rs  server.rs  template.rs
static/: styles.css
templates/: base.html  blog.html
